<resources>
    <string name="app_name">GotCha</string>
    <string name="got_cha_title">GotCha!</string>
    <string name="got_cha_description">Touch the back of you friends phone, and tap below in order to find them!</string>
    <string name="beam_me_up">Beam Me Up!</string>
    <string name="find_friends">Find Your Friends</string>
    <string name="scan_for_humans">Scan For Humans</string>
    <string name="set_profile">Set Up Profile</string>

    <string name="profile_data">PROFILE_DATA</string>

    <string name="contact_data">CONTACT_DATA</string>
    <string name="my_contacts">My Contacts</string>

    <string name="field_name">Name</string>
    <string name="field_email">Email</string>
    <string name="field_phone">Phone Number</string>
    <string name="field_kik">Kik</string>
    <string name="field_facebook">Facebook</string>
    <string name="field_twitter">Twitter</string>
    <string name="field_instagram">Instagram</string>
    <string name="field_youtube">Youtube</string>
    <string name="field_linkedin">LinkedIn</string>
    <string name="add_friend">Add Friend</string>

    <string name="save">Save</string>
    <string name="servicedesc">Host Card Emulator Service</string>
    <string name="aiddescription">Sample AID for testing</string>

    <string name="add_new_profile">Add New Profile</string>
    <string name="add_a_handle">Add a Handle</string>

    <string name="edit">Edit</string>

</resources>
